# logzip

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  benchmark.py  fly.toml  log.compressed.txt  logzip_preprocess.sh  pyproject.toml  settings_fragment.json  smithery.yaml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
benches/: benches.rs
crates/logzip-core/: Cargo.toml
crates/logzip-core/src/: compress.rs  legend.rs  lib.rs  normalizer.rs  profiles.rs  templates.rs
crates/logzip-mcp/: Cargo.toml
crates/logzip-mcp/src/: http.rs  main.rs  mcp.rs  sandbox.rs  tools.rs
crates/logzip-py/: Cargo.toml
crates/logzip-py/src/: lib.rs
docs/superpowers/plans/: 2026-04-22-recursive-bpe.md  2026-04-23-logzip-mcp.md
docs/superpowers/specs/: 2026-04-22-recursive-bpe-design.md  2026-04-23-logzip-mcp-design.md
logzip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/logzip/: __init__.py  __main__.py
skills/log-analysis/: SKILL.md
src/: base62.rs  compress.rs  legend.rs  lib.rs  profiles.rs
tests/: smoke_mcp.py  test_logzip.py
