[workspace]
members = [
    "crates/logzip-core",
    "crates/logzip-py",
    "crates/logzip-mcp",
]
resolver = "2"

[workspace.package]
version = "2.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
logzip-core = { path = "crates/logzip-core", version = "2.1.1" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
