[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "logzip"
version = "1.1.0"
description = "Compress logs for LLM analysis (Rust-powered)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nail" }]
keywords = ["log", "compression", "llm", "rust", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Logging",
]

[project.scripts]
logzip = "logzip.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7", "maturin>=1.5"]

[tool.maturin]
python-source = "python"
module-name = "logzip._logzip"
features = ["pyo3/extension-module"]
