[package]
name = "logzip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core compression engine for logzip"

[lib]
crate-type = ["rlib"]

[dependencies]
regex = "1"
rayon = "1.10"
aho-corasick = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
