[package]
name = "logzip"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compress logs for LLM analysis — CLI + MCP server"
keywords = ["log", "compression", "llm", "mcp"]

[[bin]]
name = "logzip"
path = "src/main.rs"

[dependencies]
logzip-core = { path = "../logzip-core" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
