[package]
name = "logzip"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Compress logs for LLM analysis — CLI + MCP server"
keywords = ["log", "compression", "llm", "mcp"]

[[bin]]
name = "logzip"
path = "src/main.rs"

[dependencies]
logzip-core.workspace = true
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
tower-http  = { version = "0.5", features = ["cors"] }
